<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.ktoma.bmi.bmiMainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <TextView
        android:id="@+id/Mass"
        style="@style/big_text"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:gravity="center"
        android:text="@string/mass_kg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />


    <EditText
        android:id="@+id/mass_field"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="45dp" />

    <TextView
        android:id="@+id/Height"
        style="@style/big_text"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:gravity="center"
        android:text="@string/height_m" />

    <EditText
        android:id="@+id/height_field"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="45dp" />

    <Button
        android:id="@+id/count_button"
        style="@style/small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/count"
        android:background="@color/colorPrimary"
        />

    <TextView
        android:id="@+id/true_false"
        style="@style/small_text"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:gravity="center"
        android:text="" />

    <Switch
        android:id="@+id/change_for_feets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_metrics"
        style="@style/about_me_text_style"
        android:thumbTint="@color/colorPrimary"
        />

</LinearLayout>
</ScrollView>